# argon2

./: CMakeLists.txt  README.md  build.bat  build.sh
qmake/libargon2/: libargon2.pro
